--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="http://www.linkedin.com/in/surekha-maganti-a03287191">LinkedIn</a>
     <a class="footer-link" href="https://surekhaui.github.io/drumkit/">drumkit</a>
-    <a class="footer-link" href="https://surekhaui.github.io/surekha/">Website</a>
+    <a class="footer-link" href="https://surekhaui.github.io/simongame/">simongame</a>
     <p>© 2016 surekha Maganti.</p>
   </div>
 </body>
