--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="skill-row">
         <img class="skill1" src="images/fire.png" alt="Hotskills">
         <h3>Special Skills</h3>
-        <p>About 5+ years of experience in designing Build process, Software Product Development, Process Automation, Build and Deployment Automation,
+        <p>About 8 years of experience in designing Build process, Software Product Development, Process Automation, Build and Deployment Automation,
           Release Management, Packaging Quality Control, Source Code repository & Environment management. I'm efficient Teamplayer and
         Self motivated Indivadual.</p>
       </div>
@@ -59,72 +59,72 @@
                 <td>Web Development <br />
                 HTML</td>
                 <td>4</td>
-                <td>1</td>
+                <td>8</td>
               </tr>
               <tr>
                 <td>CSS</td>
                 <td>4</td>
-                <td>2</td>
+                <td>8</td>
               </tr>
               <tr>
                 <td>Linux(Centos,Ubuntu and Red hat)</td>
                 <td>3.5</td>
-                <td>4</td>
+                <td>5</td>
               </tr>
               <tr>
                 <td>JavaScript</td>
                 <td>4</td>
-                <td>4</td>
+                <td>8</td>
               </tr>
               <tr>
                 <td>Jenkins & Git</td>
                 <td>4</td>
-                <td>3</td>
+                <td>6</td>
               </tr>
               <tr>
                 <td>node Js</td>
                 <td>4</td>
-                <td>4</td>
+                <td>6</td>
               </tr>
               <tr>
                 <td>Angular(6,7,8)</td>
                 <td>3.5</td>
-                <td>3</td>
+                <td>5</td>
               </tr>
               <tr>
                 <td>React Js</td>
                 <td>4</td>
-                <td>4</td>
+                <td>6</td>
               </tr>
               <tr>
                 <td>SQL</td>
                 <td>4</td>
-                <td>3</td>
+                <td>6</td>
               </tr>
               <tr>
                 <td>Jira,Confluence and Splunk</td>
                 <td>4</td>
-                <td>4</td>
+                <td>6</td>
               </tr>
               <tr>
                 <td>Apache,Tomcat and Weblogic Server</td>
                 <td>4</td>
-                <td>2</td>
+                <td>5</td>
               </tr>
               <tr>
                 <td>Vmware</td>
                 <td>4</td>
-                <td>2</td>
+                <td>6</td>
               </tr>
               <tr>
                 <td>Express Js</td>
                 <td>4</td>
-                <td>2</td>
+                <td>5</td>
               </tr>
               <tr>
                 <td>API</td>
                 <td>4</td>
-                <td>2</td>
+                <td>6</td>
               </tr>
             </table>
             </div>
@@ -141,7 +141,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="http://www.linkedin.com/in/surekha-maganti-a03287191">LinkedIn</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/surekha-maganti-60a8681bb">LinkedIn</a>
     <a class="footer-link" href="https://surekhaui.github.io/drumkit/">drumkit</a>
     <a class="footer-link" href="https://surekhaui.github.io/simongame/">simongame</a>
     <p>© 2016 surekha Maganti.</p>
