--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/surekha-maganti-60a8681bb">LinkedIn</a>
     <a class="footer-link" href="https://surekhaui.github.io/drumkit/">drumkit</a>
     <a class="footer-link" href="https://surekhaui.github.io/simongame/">simongame</a>
+    <a class="footer-link" href="https://github.com/surekhaui/contacts_db.git">Dashboard-contacts</a>
     <p>© 2016 surekha Maganti.</p>
   </div>
 </body>
