--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
     <a class="footer-link" href="https://surekhaui.github.io/drumkit/">drumkit</a>
     <a class="footer-link" href="https://surekhaui.github.io/simongame/">simongame</a>
     <a class="footer-link" href="https://github.com/surekhaui/contacts_db.git">Dashboard-contacts</a>
+    <a class="footer-link" href="https://surekhaui.github.io/findDog/">findDog</a>
     <p>© 2016 surekha Maganti.</p>
   </div>
 </body>
