--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <a class="footer-link" href="https://surekhaui.github.io/simongame/">simongame</a>
     <a class="footer-link" href="https://github.com/surekhaui/contacts_db.git">Dashboard-contacts</a>
     <a class="footer-link" href="https://surekhaui.github.io/findDog/">findDog</a>
-     <a class="footer-link" href="https://surekhaui.github.io/dicegame/">Dicegame</a>
+     <a class="footer-link" href="https://github.com/surekhaui/dicegame.git">Dicegame</a>
     <p>© 2016 surekha Maganti.</p>
   </div>
 </body>
